Change to web font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="css/main.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -20,6 +22,7 @@
 
 <main>
   <h2 id="hadrosaur">Hadrosaur</h2>
+
   <figure>
     <img src="images/hadrosaur.jpg" alt="">
     <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
