Remove extra class intros within html

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <h2 id="iguanodon">Iguanodon</h2>
     <figure>
       <img src="images/iguanodon.jpg" alt="">
-      <figcaption class="intro">Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
+      <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
     </figure>
 
     <h2 id="stegosaurus">Stegosaurus</h2>
     <figure>
       <img src="images/stegosaurus.jpg" alt="">
-      <figcaption class="intro">Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
+      <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
   </main>
 
